--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@ class="container__imagem">
     Biblioteca Start
     </h1>
     <p class="container__frase">
-    "Aqui cada livro é um <i>start</i> para o seu
-    
-    conhecimento!"</p>
+    "Se eu fosse um pato e voce fosse minha patinha tambem... Nosso amor seria <i>PATOda vida</i>"</p>
     </div>
     </header>
     </body>
