--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ scale=1.0">
 <body>
 <header class="cabecalho">
 <div class="container">
-<img src="IMG/Logo.svg" alt="logotipo"
+<img src="IMG/IMG.svg" alt="logotipo"
 
 class="container__imagem">
 <h1 class="container__titulo">
-    Biblioteca Start
+    PATOda vida
     </h1>
     <p class="container__frase">
     "Se eu fosse um pato e voce fosse minha patinha tambem... Nosso amor seria <i>PATOda vida</i>"</p>
